trunk/Archive2/e5/72ec860b8c9515/output
main.cpp:20:20: error: unknown type name 'T'
void insertionSort(T* element, int size);
                   ^
main.cpp:24:3: error: no matching function for call to 'insertionSort'
  insertionSort<std::greater>(A, 7);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
main.cpp:5:6: note: candidate template ignored: invalid explicitly-specified argument for template parameter 'T'
void insertionSort(T* elements, int size) {
     ^
2 errors generated.
